--- a/deletion_linkedlist.ipynb
+++ b/deletion_linkedlist.ipynb
@@ -427,6 +427,19 @@
    "source": [
     "Fibonacci(4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57814626",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S.push(1)\n",
+    "S.push(2)\n",
+    "S.push(4)\n",
+    "S.push(-1)"
+   ]
   }
  ],
  "metadata": {
