--- a/Advent/3/3Part2.ipynb
+++ b/Advent/3/3Part2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f72ab675",
+   "id": "fa2a9df7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5f2f49a2",
+   "execution_count": 18,
+   "id": "05734c41",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "300"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "fb654d2f",
+   "execution_count": 19,
+   "id": "56fea5e0",
    "metadata": {},
    "outputs": [
     {
@@ -53,26 +53,24 @@
        "list"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "final = []\n",
-    "temp = []\n",
-    "temp2 = []\n",
-    "actual = []\n",
-    "wa = 0\n",
+    "e1 = []\n",
+    "e2 = []\n",
+    "e3 = []\n",
     "\n",
-    "for i in range(0,len(linea)):\n",
-    "    actual = linea[i]\n",
-    "    temp = actual[:len(linea[i])//2]\n",
-    "    temp2 = actual[len(linea[i])//2:]\n",
+    "for i in range(0,len(linea),3):\n",
+    "    e1 = linea[i]\n",
+    "    e2 = linea[i+1]\n",
+    "    e3 = linea[i+2]\n",
     "    \n",
-    "    for x in temp:\n",
-    "        if x in temp2:\n",
-    "            wa += 1\n",
+    "    for x in e1:\n",
+    "        if (x in e2) and (x in e3):\n",
     "            final.append(x)\n",
     "            break\n",
     "type(final)"
@@ -80,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "b9043eb9",
+   "execution_count": 20,
+   "id": "bb8f55f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,17 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "8836a322",
+   "execution_count": 21,
+   "id": "1ede8f05",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7826"
+       "2577"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "928b759a",
+   "id": "8d005f4c",
    "metadata": {},
    "outputs": [],
    "source": []
